Closed Bug 25914 Opened 25 years ago Closed 25 years ago

[regression]Display: all non-ascii chars are garbled in Subject field

Categories

(MailNews Core :: Internationalization, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: marina, Assigned: rhp)

Details

all non-ascii chars are garbled in Subject field when viewing **** observed with 2000-01-31-08-M14 build **** Steps to reproduce: - select a Smoketest folder; -select any message in this folder and note: //thread is OK but Subject in the message body garbles all non-ascii chars
Adding rhp and mscott to cc.
Rich, could this be related to the changes you checked into nsMimeBaseEmitter and stuff Friday/Saturday? I have a build from Friday that displays my I18N Smoketest messages without a problem. Hmm...
Hmm...could be ... let me check. - rhp
Assignee: nhotta → rhp
The non-ASCII sender's name is grabled too on the message view pane.
This should be all better now :-) - rhp
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Target Milestone: M14
Summary: Display: all non-ascii chars are garbled in Subject field → [regression]Display: all non-ascii chars are garbled in Subject field
verified as fixed in 2000-02-01-08 M14 build
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.