Fix for I18N display of headers - Bug 25914 - r: mscott